VeraSandBox2016/src/objects/Claim__c.object
<CustomObject>
    <fields>
        <fullName>Admin_Claim__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check Admin Claim if there is no related incident (for example for flight changes, baggage issues during travel, etc.)</inlineHelpText>
        <label>Admin Claim</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Claim_Description__c</fullName>
        <label>Claim Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <formula>Trip__r.Contact__r.FirstName &amp; &quot; &quot; &amp; Trip__r.Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Case_Number__c</fullName>
        <label>File/Case Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incident__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Incident</label>
        <referenceTo>Incident__c</referenceTo>
        <relationshipLabel>Claims</relationshipLabel>
        <relationshipName>Claims</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Insurance_Company__c</fullName>
        <label>Insurance Company</label>
        <picklist>
            <picklistValues>
                <fullName>TSM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Trip__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trip</label>
        <referenceTo>Trip__c</referenceTo>
        <relationshipLabel>Claims</relationshipLabel>
        <relationshipName>Claims</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Claim</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CLA-{00000}</displayFormat>
        <label>JRRID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Claims</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Incident_Required_Unless_Admin</fullName>
        <active>true</active>
        <description>If the claim is not an Admin claim, user must include related Incident</description>
        <errorConditionFormula>AND(Admin_Claim__c=FALSE, ISNULL(Incident__c))</errorConditionFormula>
        <errorDisplayField>Incident__c</errorDisplayField>
        <errorMessage>Unless the Admin box is checked, you must reference the related Incident</errorMessage>
    </validationRules>
</CustomObject>